fix pom.xml, readme and add camelot.properties to .gitignore